--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -184,16 +184,18 @@
            nativeping="yes" 
            proxyranges="*"> 
 
+<sts host="*"
+     duration="60d"
+     port="6697"
+     preload="yes">
+
 
 #-#-#-#-#-#-#-#-#-#额外的模块配置-#-#-#-#-#-#-#-#
 <maxmind file="&dir.config;/conf/CC.mmdb">
 
 # 配置SSL(如果让此项生效,需要自行编译和启用SSL模块,如果是安装了官方的安装包,此配置不生效)
 # 请自行参考官方配置后补充配置 对应模块:ssl_openssl 或 ssl_gnutls 和 ircv3_sts
-<sts host="*"
-     duration="60d"
-     port="6697"
-     preload="yes">
+# 注意：此部分仅在 INSPIRCD 编译时启用 SSL 支持时可用
 
 <gnutls onrehash="yes">
 <sslprofile name="Clients"
@@ -214,8 +216,10 @@
             priority="NORMAL">
 
 
-#-#-#-#-#-#-#-#-#-#IRC多服务器桥接/IRC服务框架-#-#-#-#-#-#-#-#
-# 请自行参考官方配置后补充配置 对应模块:spanningtree
+#-#-#-#-#-#-#-#-#-#IRC多服务器桥接-#-#-#-#-#-#-#-#
+# 请自行参考官方配置后补充配置
+# https://docs.inspircd.org/4/modules/spanningtree/
+# https://github.com/inspircd/inspircd/blob/insp4/docs/conf/links.example.conf
 
 
 #-#-#-#-#-#-#-#-#-#数据库-#-#-#-#-#-#-#-#
