--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -1,11 +1,11 @@
 # Inspircd conf ---UTF-8 ---Security configuration
-# 这只是一个基础的配置文件 它可能需要根据您的需求进行调整
+# 这只是一个基础的设置文件 它可能需要根据您的需求进行调整
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
 # !!!!预编译模块需要[自行编译安装]或者[使用我们已编译好的全模块软件包]后才可以使用,否则将会报错,这也是我们注释掉第三方模块的原因
 
-# 您可以在以下文档中查询详细配置来完善此配置,我们的配置基于官方文档
+# 您可以在以下文档中查询详细设置来完善此设置,我们的设置基于官方文档
 # 请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
-# 以及官方的InspIRCd文档(更详细的) https://docs.inspircd.org/4/configuration 进行详细配置
+# 以及官方的InspIRCd文档(更详细的) https://docs.inspircd.org/4/configuration 进行详细设置
 # 也请查看我们的README.md文件以获取更多信息 https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/README.md
 
 
@@ -36,13 +36,13 @@
        email="pbp9wdep2@mozmail.com">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-端口设置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
 <bind port="6667,6668,6669"
       type="clients">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-连接配置-#-#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-连接设置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<connect>标签定义了一个类,当用户连接到服务器时,可以将用户过滤到这个类中.此标记可以根据需要定义多次.
 <connect name="Main"
          commandrate="1000"
@@ -77,7 +77,7 @@
       ipv6clone="128">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-操作员配置-#-#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-操作员设置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<class>标签定义了一组服务器操作员特权.此标记可以根据需要定义多次
 <class name="Shutdown"
        commands="DIE RESTART REHASH LOADMODULE UNLOADMODULE RELOADMODULE GLOADMODULE GUNLOADMODULE GRELOADMODULE">
@@ -113,11 +113,11 @@
        level="50">
 
 #<oper>标签定义了一个服务器操作员帐户.此标记可以根据需要定义多次.
-# 使用include来加载一个单独的操作员账户配置文件
+# 使用include来加载一个单独的操作员账户设置文件
 <include file="&ConfPath;opers.conf">
 
 
-#-#-#-#-#-#-#-#-#-#-杂项配置-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-杂项设置-#-#-#-#-#-#-#-#-#-#
 #<files><execfiles>标签读取一个或多个文件.这两个标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
 <files motd="&TxtPath;motd.txt"
        opermotd="&TxtPath;opermotd.txt"
@@ -133,7 +133,7 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#-服务器选项-#-#-#-#-#-#-#-#-#-#-#-#-#
-#<options>标签定义了常规配置选项.此标记只能定义一次.
+#<options>标签定义了常规设置选项.此标记只能定义一次.
 <options cyclehostsfromuser="no"
          defaultbind="auto"
          defaultmodes="nost"
@@ -156,8 +156,8 @@
          xlinequit="您因 %fulltype% 被限制, 此限制于 %created% 创建, 将持续 %duration%, 预计 %expiry% 到期. 设置者为 %setter%, 原因是：%reason%.  如获取帮助 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取详细信息.">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#安全配置#-#-#-#-#-#-#-#-#-#-#-#
-#<security>标签定义了与服务器安全相关的配置选项.此标记只能定义一次.
+#-#-#-#-#-#-#-#-#-#-#-#安全设置#-#-#-#-#-#-#-#-#-#-#-#
+#<security>标签定义了与服务器安全相关的设置选项.此标记只能定义一次.
 <security announceinvites="dynamic"
           customversion=""
           genericoper="no"
@@ -177,8 +177,8 @@
            reason="本机地址">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#性能配置#-#-#-#-#-#-#-#-#-#-#
-#<performance>标签定义了与服务器性能相关的配置选项.此标记只能定义一次.
+#-#-#-#-#-#-#-#-#-#-#-#性能设置#-#-#-#-#-#-#-#-#-#-#
+#<performance>标签定义了与服务器性能相关的设置选项.此标记只能定义一次.
 <performance clonesonconnect="yes" 
              netbuffersize="" 
              softlimit="" 
@@ -187,15 +187,15 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#-WHOWAS选项-#-#-#-#-#-#-#-#-#-#-#-#-#
-#<whowas>标签定义了/WHOWAS数据库的配置.此标记只能定义一次.
+#<whowas>标签定义了/WHOWAS数据库的设置.此标记只能定义一次.
 <whowas groupsize="10"
         maxgroups="10000"
         maxkeep="12h"
         nickupdate="yes">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-#限制配置#-#-#-#-#-#-#-#-#-#-#-#
-#<limits> 标记定义用户可配置字段最大长度
+#-#-#-#-#-#-#-#-#-#-#-#-#限制设置#-#-#-#-#-#-#-#-#-#-#-#
+#<limits> 标记定义用户可设置字段最大长度
 <limits maxaway="390"
         maxchan="64"
         maxhost="70"
@@ -439,6 +439,6 @@
 #<module name="ssl_openssl">
 #<module name="sslrehashsignal">
 
-######模块的配置文件
+######模块的设置文件
 <include file="&ConfPath;modulesconf.conf"> 
 
