--- a/ARKFUTURE/CONFIG/other/ngircd.conf
+++ b/ARKFUTURE/CONFIG/other/ngircd.conf
@@ -2,9 +2,9 @@
 # 这只是一个基础的配置文件 它可能需要根据您的需求进行调整
 # 注释以 "#" 或 ";" 开头。
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
-# 
+#
 # 您可以在以下文档中查询详细配置来完善此配置,我们的配置基于官方文档
-# https://ngircd.barton.de/documentation.php.en 
+# https://ngircd.barton.de/documentation.php.en
 #
 # 使用 "ngircd --configtest"验证服务器是否正确解析配置文件
 # 也请查看我们的README.md文件以获取更多信息 https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/README.md
@@ -23,14 +23,14 @@
 	# 帮助文本的文本文件 此文件将显示在客户端的 /HELP 命令中
 	HelpFile = /usr/share/doc/ngircd/Commands.txt
 
-	# 服务器信息文本 该内容将通过WHOIS和LINKS等命令显示  
+	# 服务器信息文本 该内容将通过WHOIS和LINKS等命令显示
 	Info = ARKFUTURE-NET
 
-	# 服务器应监听的IP地址逗号分隔列表
+	# 服务器应监听的IP地址逗号分隔列表 注释为自动匹配
 	Listen = ::,0.0.0.0
 
 	# MOTD 文件路径
-	;MotdFile = /etc/ngircd.motd
+	;MotdFile = /etc/ngircd/ngircd.motd
 
 	# 用于替代MOTD文件的简单短语
 	MotdPhrase = "Welcome to ARKFUTURE"
@@ -39,15 +39,16 @@
 	Network = ARKFUTURE
 
 	# 所有用户连接服务器所需的全局密码
-	;Password = abc
+	;Password =
 
 	# pid文件路径
 	PidFile = /var/run/ngircd/ngircd.pid
 
 	# 服务器监听端口列表 (非tls加密端口)
 	Ports = 6667, 6668, 6669
-
+	
 	# ngIRCd运行时的组ID 可使用组名或数字ID 注意 必须由root权限启动
+	;ServerGID = 65534
 
 	# 服务器运行时用户ID 可使用用户名或数字ID 注意 必须由root权限启动 此外 配置文件和MOTD文件必须对该用户可读 否则RESTART和REHASH命令将失效
 	;ServerUID = 65534
@@ -61,20 +62,20 @@
 	ConnectRetry = 60
 
 	# 当处理完至少一个客户端后 若所有连接均处于非活动状态 则在此秒数后整个守护进程将关闭 0为不关闭
-	IdleTimeout = 0
+	;IdleTimeout = 0
 
 	# 服务器允许接受的入站与出站连接最大总数
 	MaxConnections = 0
 
 	# 单一IP地址允许建立的并发连接数上限
-	MaxConnectionsIP = 5
+	MaxConnectionsIP = 10
 
 	# 用户可加入的频道数量上限
 	MaxJoins = 0
 
 	# 用户昵称最大长度 符合RFC 2812标准
 	# 注意 IRC网络中所有服务器必须使用相同的昵称长度限制
-	MaxNickLength = 9
+	;MaxNickLength = 9
 
 	# 每次处罚事件的最高惩罚时间增量 设为-1表示无限制 0则完全禁用处罚机制 守护进程在常规运行中处罚增量不超过2秒
 	MaxPenaltyTime = -1
@@ -101,7 +102,7 @@
 	AllowRemoteOper = yes
 
 	# 初始化完成后进行 chroot 的目录 若 ngIRCd 编译为静态二进制文件 则无需填充该目录 (默认禁用此项)
-	;ChrootDir = /var/empty
+	;ChrootDir =
 
 	# 为所有客户端设置此主机名以替代真实主机名 使用 %x 可添加原始主机名的哈希值
 	CloakHost = %x-AFENet
@@ -110,7 +111,7 @@
 	CloakHostModeX = %x-AFENet
 
 	# 伪装主机名哈希计算的盐值 若未定义 则每次服务器启动后生成随机哈希值
-	CloakHostSalt = 
+	;CloakHostSalt =
 
 	# 将所有客户端的用户名设置为其昵称
 	CloakUserToNick = yes
@@ -120,18 +121,14 @@
 	ConnectIPv4 = yes
 
 	# 为新本地客户端设置的默认用户模式
-	DefaultUserModes = 
+	DefaultUserModes =
 
 	# 当客户端连接至服务器时执行 DNS 查询
 	DNS = yes
 
-	# 若 ngIRCd 已编译支持 IDENT 执行 IDENT 查询 通过 IDENT 认证的用户
-	# 其用户名不会带有前缀 "~" 字符
-	;Ident = yes
-
 	# 包含配置片段 *.conf 的目录，应在解析本配置文件后读取
 	# be read in after parsing this configuration file.
-	;IncludeDir = /etc/conf.d
+	;IncludeDir =
 
 	# 通过屏蔽空闲时间 登录时间等信息略微增强用户隐私
 	# 适用于 TOR 或 I2P 上的 IRC 服务器
@@ -140,7 +137,7 @@
 	# 通常 ngIRCd 在客户端完成注册前不向其发送任何消息 启用此选项可允许服务器在客户端 连接过程中发送 "NOTICE *" 消息
 	NoticeBeforeRegistration = no
 
-	# 是否允许 IRC 管理员使用 MODE 命令 即使其并非频道管理员 
+	# 是否允许 IRC 管理员使用 MODE 命令 即使其并非频道管理员
 	OperCanUseMode = no
 
 	# 是否让 IRC 管理员在持久化 +P 频道中自动获得频道管理员 +o 权限
@@ -151,12 +148,13 @@
 
 	# 若 ngIRCd 已编译支持 PAM，则使用 PAM 通过 PAM 认证的用户
     # 其用户名不会带有前缀 "~" 字符
-	;PAM = yes
+	# !此项必须解除注释 并配置为no 否则不能登录!
+	PAM = no
 
 	# 当启用 PAM 时 是否要求所有客户端必须通过 PAM 认证?
-    # 若设置此选项 未发送密码的客户端仍可连接，但其用户名会保留前缀 "~" 字符 
-    # 注意：启用 "Ident" "PAM" 和 "PAMIsOptional" 的组合可能无实用价值 
-    # 因为无法区分通过 Ident 和 PAM 认证的用户 
+    # 若设置此选项 未发送密码的客户端仍可连接，但其用户名会保留前缀 "~" 字符
+    # 注意：启用 "Ident" "PAM" 和 "PAMIsOptional" 的组合可能无实用价值
+    # 因为无法区分通过 Ident 和 PAM 认证的用户
 	;PAMIsOptional = no
 
 	# 当启用 PAM 时 此值决定使用的 PAM 配置该设置允许通过不同 PAM 配置运行多个 ngIRCd 实例
@@ -170,27 +168,27 @@
 	ScrubCTCP = no
 
 	# ngIRCd 发送日志消息的系统日志设施。可选值依系统而定
-	;SyslogFacility = local1
+	SyslogFacility = local1
 
 	# 使用 WEBIRC 命令 某些 Web-to-IRC 网关使用 所需的密码 若未设置/为空 则无法使用 WEBIRC 命令
-	WebircPassword = xyz
+	;WebircPassword =
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-SSL-#-#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-SSL配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 ;[SSL]
 	# SSL 相关配置选项。注意：此部分仅在 ngIRCd 编译时启用 SSL 支持时可用
 
 	# SSL 服务器密钥证书
 	;CertFile = /etc/ssl/server-cert.pem
 
-	# 选择允许用于 SSL/TLS 连接的加密套件默认值为 
+	# 选择允许用于 SSL/TLS 连接的加密套件默认值为
 	# HIGH:!aNULL:@STRENGTH (OpenSSL) 或 SECURE128 (GnuTLS)
 	# 详细信息参见 'man 1ssl ciphers' (OpenSSL) 或 'man 3 gnutls_priority_init' (GnuTLS)
-	# 
+	#
 	# OpenSSL 配置:
-	;CipherList = HIGH:!aNULL:@STRENGTH:!SSLv3 
+	;CipherList = HIGH:!aNULL:@STRENGTH:!SSLv3
 	# GnuTLS 配置:
-	;CipherList = SECURE128:-VERS-SSL3.0 
+	;CipherList = SECURE128:-VERS-SSL3.0
 
 	# Diffie-Hellman 参数文件
 	;DHFile = /etc/ssl/dhparams.pem
@@ -198,7 +196,7 @@
 	# SSL 服务器密钥文件
 	;KeyFile = /etc/ssl/server-key.pem
 
-	# 解密 SSL 密钥文件的密码 仅适用于 OpenSSL 
+	# 解密 SSL 密钥文件的密码 仅适用于 OpenSSL
 	;KeyFilePassword = secret
 
 	# 期望 SSL/TLS 加密连接的额外监听端口
@@ -221,25 +219,25 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-IRC多服务器桥接-#-#-#-#-#-#-#-#-#-#-#-#-#
 [Server]
-	# [Server] 区块用于配置其他服务器连接 若为连接指定端口 
+	# [Server] 区块用于配置其他服务器连接 若为连接指定端口
 	# ngircd 将尝试通过该端口主动连接对方服务器 否则将等待对方连接
-	# 可配置多个 [Server] 区块 每个对应一个服务器连接 
+	# 可配置多个 [Server] 区块 每个对应一个服务器连接
 	#
 	# 服务器组机制:
-	# ngIRCd 支持"服务器组": 可为每个需互联的服务器分配"ID" 
-	# 若某组服务器无响应 ngIRCd 将尝试连接该组内下一台服务器 
-	# 但不会同时连接具有相同组 ID 的多台服务器 
+	# ngIRCd 支持"服务器组": 可为每个需互联的服务器分配"ID"
+	# 若某组服务器无响应 ngIRCd 将尝试连接该组内下一台服务器
+	# 但不会同时连接具有相同组 ID 的多台服务器
 
 	# 远程服务器的 IRC 名称 也就是服务器名
 	;Name = irc2.example.net
 
-	# 对等服务器的主机名或 IP 地址 仅需在需主动连接时配置 
+	# 对等服务器的主机名或 IP 地址 仅需在需主动连接时配置
 	;Host = connect-to-host.example.net
 
-	# 指定连接使用的源 IP 地址 若未设置 由操作系统自动选择 
-	;Bind = 
+	# 指定连接使用的源 IP 地址 若未设置 由操作系统自动选择
+	;Bind =
 
-	# 目标服务器连接端口 若未指定端口 则等待对方发起连接 
+	# 目标服务器连接端口 若未指定端口 则等待对方发起连接
 	;Port = 6667
 
 	# 本端连接密码 远程服务器将用于登录本地服务器的密码
@@ -251,16 +249,16 @@
 	# 服务器组标识 可选
 	;Group = 123
 
-	# 设为 "yes" 禁止主动连接对端 等效于留空"Port"参数 
-	# 优势在于可预配端口 后续通过 IRC 命令 CONNECT 手动快速连接 
+	# 设为 "yes" 禁止主动连接对端 等效于留空"Port"参数
+	# 优势在于可预配端口 后续通过 IRC 命令 CONNECT 手动快速连接
 	;Passive = no
 
 	# 是否使用 TLS/SSL 加密连接 (默认: false)
 	;SSLConnect = yes
 
-	# 定义通过此远程服务器接入时应视为 IRC 服务的昵称匹配掩码列表 
-	# 不区分大小写 以逗号分隔  常规服务器无需此参数 保持默认空值 
-	# 若连接伪装为服务器的 IRC 服务 如 "NickServ"、"ChanServ" 等虚拟用户  
+	# 定义通过此远程服务器接入时应视为 IRC 服务的昵称匹配掩码列表
+	# 不区分大小写 以逗号分隔  常规服务器无需此参数 保持默认空值
+	# 若连接伪装为服务器的 IRC 服务 如 "NickServ"、"ChanServ" 等虚拟用户
 	# 应设置为类似 "*Serv" 或 "NickServ,ChanServ,XyzServ"
 	;ServiceMask = *Serv,Global
 
