--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -6,19 +6,17 @@ notransit = false
 floodfill = true
 
 ## 日志
-log = true
+log = file
 loglevel = warn
 
 ## 服务
 [ntcp2]
 enabled = true
 published = true
-port = 4567
 
 [ssu2]
 enabled = true
 published = true
-port = 4567
 
 [http]
 enabled = true
@@ -29,7 +27,7 @@ lang = chinese
 enabled = true
 port = 4444
 addresshelper = true
-outproxy = http://false.i2p
+outproxy = http://exit.stormycloud.i2p
 
 [socksproxy]
 enabled = true
@@ -54,11 +52,12 @@ password = 123456
 
 [upnp]
 enabled = true
-name = I2Pd
+name = I2P
 
 [reseed]
 verify = true
 urls = https://reseed.i2p-projekt.de/,https://reseed2.i2p.net/,https://reseed.stormycloud.org/,https://reseed-fr.i2pd.xyz/,https://reseed.i2pgit.org/,https://reseed.onion.im/,https://coconut.incognet.io/,https://banana.incognet.io/,https://i2p.ghativega.in/,https://www2.mk16.de/,https://i2p.novg.net/,https://reseed-pl.i2pd.xyz/,https://reseed.memcpy.io/,https://reseed.diva.exchange/,https://i2pseed.creativecowpat.net:8443/,https://i2p.mooo.com/netDb/,https://netdb.i2p2.no/
+#file = 
 yggurls = http://[324:71e:281a:9ed3::ace]:7070/
 #proxy = socks://127.0.0.1:5554
 
@@ -73,7 +72,7 @@ addressbook = true
 [nettime]
 enabled = true
 ntpservers = pool.ntp.org
-ntpsyncinterval = 72
+ntpsyncinterval = 12
 
 [meshnets]
 yggdrasil = false
