--- a/ARKFUTURE/CONFIG/other/ngircd.conf
+++ b/ARKFUTURE/CONFIG/other/ngircd.conf
@@ -171,7 +171,7 @@
 	SyslogFacility = local1
 
 	# 使用 WEBIRC 命令 某些 Web-to-IRC 网关使用 所需的密码 若未设置/为空 则无法使用 WEBIRC 命令
-	;WebircPassword =
+	WebircPassword = 6vHdPdzruw3EFX4
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-SSL配置-#-#-#-#-#-#-#-#-#-#-#-#-#
