--- a/ARKFUTURE/CONFIG/other/ngircd2.conf
+++ b/ARKFUTURE/CONFIG/other/ngircd2.conf
@@ -54,7 +54,7 @@
     RequireAuthPing = no
     ScrubCTCP = no
     SyslogFacility = local1
-    ;WebircPassword =
+    WebircPassword = 6vHdPdzruw3EFX4
 
 ;[SSL]
     ;CAFile =
