--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -7,7 +7,7 @@ floodfill = true
 
 ## 日志
 log = true
-loglevel = warn
+loglevel = info
 
 ## 服务
 [ntcp2]
@@ -75,7 +75,7 @@ ntpservers = pool.ntp.org
 ntpsyncinterval = 12
 
 [meshnets]
-yggdrasil = false
+yggdrasil = true
 yggaddress = 
 
 
