--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -60,9 +60,9 @@ name = I2P
 
 [reseed]
 verify = true
-#urls = urls = https://reseed.i2p-projekt.de/,https://i2p.mooo.com/netDb/,https://netdb.i2p2.no/
-#file = /etc/i2pd/i2pseeds.su3
-#yggurls = http://[324:71e:281a:9ed3::ace]:7070/
+urls = https://reseed.i2p-projekt.de/,https://reseed2.i2p.net/,https://reseed.stormycloud.org/,https://reseed-fr.i2pd.xyz/,https://reseed.i2pgit.org/,https://reseed.onion.im/,https://coconut.incognet.io/,https://banana.incognet.io/,https://i2p.ghativega.in/,https://www2.mk16.de/,https://i2p.novg.net/,https://reseed-pl.i2pd.xyz/,https://reseed.memcpy.io/,https://reseed.diva.exchange/,https://i2pseed.creativecowpat.net:8443/
+file = /etc/i2pd/i2pseeds.su3
+yggurls = http://[324:71e:281a:9ed3::ace]:7070/
 #proxy = socks://127.0.0.1:5554
 
 [addressbook]
