--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -24,33 +24,40 @@ published = true
 
 [http]
 enabled = true
+address = 0.0.0.0
 port = 7070
 lang = chinese
 
 [httpproxy]
 enabled = true
+address = 0.0.0.0
 port = 4444
 addresshelper = true
 outproxy = http://exit.stormycloud.i2p
 
 [socksproxy]
 enabled = true
+address = 0.0.0.0
 port = 4447
 
 [sam]
 enabled = true
+address = 0.0.0.0
 port = 7656
 
 [bob]
 enabled = true
+address = 0.0.0.0
 port = 2827
 
 [i2cp]
 enabled = true
+address = 0.0.0.0
 port = 7654
 
 [i2pcontrol]
-enabled = true
+enabled = false
+address = 0.0.0.0
 port = 7650
 password = 123456
 
