--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -1,3 +1,8 @@
+# I2PD conf ---UTF-8 ---Security configuration
+# 这只是一个基础的配置文件 它可能需要根据您的需求进行调整
+# [http]修改为您的主机ip,否则监控页面不能打开; 其余项目中的 address 项根据个人需求修改
+# !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
+
 ## 基础
 ipv4 = true
 ipv6 = true
