--- a/ARKFUTURE/CONFIG/i2pd/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd/i2pd.conf
@@ -1,24 +1,17 @@
 # I2PD conf ---UTF-8 ---Security configuration
 # 这只是一个基础的配置文件 它可能需要根据您的需求进行调整
-# [http]修改为您的主机ip,否则监控页面不能打开; 其余项目中的 address 项根据个人需求修改
+# 此项目中的 address 项根据个人需求修改; 数据文件路径中 应该包含 certificates文件夹 否则报错
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
 
-## 基础
 ipv4 = true
 ipv6 = true
 nat = true
 notransit = false
 floodfill = true
 
-## 日志
 log = true
 loglevel = info
 
-## 使用 ElGamal 预计算表
-[precomputation]
-elgamal = false
-
-## 服务
 [ntcp2]
 enabled = true
 published = true
@@ -47,24 +40,15 @@ port = 4447
 
 [sam]
 enabled = true
-address = 127.0.0.1
 port = 7656
 
 [bob]
 enabled = true
-address = 127.0.0.1
 port = 2827
 
 [i2cp]
 enabled = true
-address = 127.0.0.1
 port = 7654
-
-[i2pcontrol]
-enabled = false
-address = 127.0.0.1
-port = 7650
-password = 123456
 
 [upnp]
 enabled = true
@@ -72,25 +56,21 @@ name = I2P
 
 [reseed]
 verify = true
-urls = https://reseed.i2p-projekt.de/,https://reseed2.i2p.net/,https://reseed.stormycloud.org/,https://reseed-fr.i2pd.xyz/,https://reseed.i2pgit.org/,https://reseed.onion.im/,https://coconut.incognet.io/,https://banana.incognet.io/,https://i2p.ghativega.in/,https://www2.mk16.de/,https://i2p.novg.net/,https://reseed-pl.i2pd.xyz/,https://reseed.memcpy.io/,https://reseed.diva.exchange/,https://i2pseed.creativecowpat.net:8443/
-file = /etc/i2pd/i2pseeds.su3
-yggurls = http://[324:71e:281a:9ed3::ace]:7070/
+#urls = 
+#yggurls = http://[324:71e:281a:9ed3::ace]:7070/
 #proxy = socks://127.0.0.1:5554
 
 [addressbook]
-defaulturl = http://shx5vqsw7usdaunyzr2qmes2fq37oumybpudrd4jjj4e4vk4uusa.b32.i2p/hosts.txt
-subscriptions = http://reg.i2p/hosts.txt,http://identiguy.i2p/hosts.txt,http://stats.i2p/cgi-bin/newhosts.txt
+enabled = true
                 
 [persist]
 profiles = true
 addressbook = true
 
-[nettime]
-enabled = true
-ntpservers = pool.ntp.org
-ntpsyncinterval = 12
-
 [meshnets]
 yggdrasil = true
 
-
+[nettime]
+enabled = true
+ntpservers = pool.ntp.org
+ntpsyncinterval = 2
