--- a/ARKFUTURE/CONFIG/i2pd&tor/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd&tor/i2pd.conf
@@ -1,8 +1,10 @@
 # I2PD conf ---UTF-8 ---Security configuration
 # 这只是一个基础的配置文件 它可能需要根据您的需求进行调整
-# 此项目中的 address 项根据个人需求修改; 数据文件路径中 应该包含 certificates文件夹 否则报错
+# 此项目中的 address 项根据个人需求修改; 数据文件路径中 应该包含 certificates文件夹 否则补种失败
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
 
+
+## 基础设置及日志
 ipv4 = true
 ipv6 = true
 nat = true
@@ -12,6 +14,7 @@ floodfill = true
 log = true
 loglevel = info
 
+## 服务设置
 [ntcp2]
 enabled = true
 published = true
