--- a/ARKFUTURE/CONFIG/i2pd&tor&gnunet/tunnels.conf
+++ b/ARKFUTURE/CONFIG/i2pd&tor&gnunet/tunnels.conf
@@ -1,6 +1,34 @@
+##### client
+[IRC-ILITA]
+type = client
+address = 127.0.0.1
+port = 6668
+destination = irc.ilita.i2p
+destinationport = 6667
+keys = irc-keys.dat
+i2p.streaming.profile=2
+
+[SMTP]
+type = client
+address = 127.0.0.1
+port = 7659
+destination = smtp.postman.i2p
+destinationport = 25
+keys = smtp-keys.dat
+
+[POP3]
+type = client
+address = 127.0.0.1
+port = 7660
+destination = pop.postman.i2p
+destinationport = 110
+keys = pop3-keys.dat
+
+
+##### server
 [anon-chatserver]
 type = irc
 host = 127.0.0.1     
 port = 6667
-keys = chatserver-key.dat
+keys = irc-keys.dat
 webircpassword = 6vHdPdzruw3EFX4
