--- a/ARKFUTURE/CONFIG/other/ngircd2.conf
+++ b/ARKFUTURE/CONFIG/other/ngircd2.conf
@@ -40,7 +40,7 @@
     CloakUserToNick = yes
     ConnectIPv4 = yes
     ConnectIPv6 = yes
-    DefaultUserModes = ixw
+    DefaultUserModes =
     DNS = yes
     ;IncludeDir =
     MorePrivacy = no
