--- a/ARKFUTURE/CONFIG/i2pd&tor&gnunet/tunnels.conf
+++ b/ARKFUTURE/CONFIG/i2pd&tor&gnunet/tunnels.conf
@@ -30,5 +30,5 @@ keys = pop3-keys.dat
 type = irc
 host = 127.0.0.1     
 port = 6667
-keys = irc-keys.dat
+keys = afeirc.dat
 webircpassword = 6vHdPdzruw3EFX4
