--- a/ARKFUTURE/CONFIG/i2pd&tor&gnunet/tunnels.conf
+++ b/ARKFUTURE/CONFIG/i2pd&tor&gnunet/tunnels.conf
@@ -26,9 +26,9 @@ keys = pop3-keys.dat
 
 
 ##### server
-[anon-chatserver]
+[IRC-AFE]
 type = irc
 host = 127.0.0.1     
 port = 6667
-keys = afeirc.dat
+keys = afeirc-keysc.dat
 webircpassword = 6vHdPdzruw3EFX4
