update emal address

--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -33,7 +33,7 @@
 #<admin>标签定义了服务器管理员的联系方式.此标记只能定义一次.
 <admin name="arkfuture"
        description="Server Administrator"
-       email="pbp9wdep2@mozmail.com">
+       email="arkfuture@i2pmail.org">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-端口设置-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -152,8 +152,8 @@
          suffixpart="&quot;"
          suffixquit=""
          syntaxhints="yes"
-         xlinemessage="您已被禁止, 如获取帮助 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取详细信息."
-         xlinequit="您因 %fulltype% 被限制, 此限制于 %created% 创建, 将持续 %duration%, 预计 %expiry% 到期. 设置者为 %setter%, 原因是：%reason%.  如获取帮助 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取详细信息.">
+         xlinemessage="您已被禁止, 如获取帮助 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取详细信息."
+         xlinequit="您因 %fulltype% 被限制, 此限制于 %created% 创建, 将持续 %duration%, 预计 %expiry% 到期. 设置者为 %setter%, 原因是：%reason%.  如获取帮助 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取详细信息.">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#安全设置#-#-#-#-#-#-#-#-#-#-#-#
@@ -161,8 +161,8 @@
 <security announceinvites="dynamic"
           customversion=""
           genericoper="no"
-          publicxlinequit="很遗憾, 你因匹配到 %fulltype% 而离开. 此 %type% 于 %created% 创建, 持续时间为 %duration%, 将于 %expiry% 过期, 目前还剩 %remaining% 时间. 如获取帮助 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取详细信息."
-          hidekills="您已经被KILL, 如获取帮助 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取详细信息."
+          publicxlinequit="很遗憾, 你因匹配到 %fulltype% 而离开. 此 %type% 于 %created% 创建, 持续时间为 %duration%, 将于 %expiry% 过期, 目前还剩 %remaining% 时间. 如获取帮助 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取详细信息."
+          hidekills="您已经被KILL, 如获取帮助 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取详细信息."
           hideserver="ARKFUTURE"
           hideservicekills="yes"
           maxtargets="20"
