--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -26,6 +26,27 @@
          snomasks="cqjknorvwxCQJKNORVWX">
 <channames allowrange=""
            denyrange="">
+<customprefix name="founder"
+              letter="q"
+              prefix="~"
+              rank="50000"
+              ranktoset="50000"
+              ranktounset="50000"
+              depriv="yes">
+<customprefix name="admin"
+              letter="a"
+              prefix="&amp;"
+              rank="40000"
+              ranktoset="50000"
+              ranktounset="50000"
+              depriv="yes">
+<customprefix name="halfop"
+              letter="h"
+              prefix="%"
+              rank="20000"
+              ranktoset="30000"
+              ranktounset="30000"
+              depriv="yes">
 <codepage name="ascii"
           charset="ascii">
 <include file="&ConfPath;ascii.conf">
