--- a/ARKFUTURE/CONFIG/other/ngircd.conf
+++ b/ARKFUTURE/CONFIG/other/ngircd.conf
@@ -18,7 +18,7 @@
 	# 关于服务器和管理员的信息
 	AdminInfo1 = arkfuture
 	AdminInfo2 = Server Administrator
-	AdminEMail = pbp9wdep2@mozmail.com
+	AdminEMail = arkfuture@i2pmail.org
 
 	# 帮助文本的文本文件 此文件将显示在客户端的 /HELP 命令中
 	HelpFile = /usr/share/doc/ngircd/Commands.txt
@@ -30,7 +30,7 @@
 	Listen = ::,0.0.0.0
 
 	# MOTD 文件路径
-	;MotdFile = /etc/ngircd/ngircd.motd
+	MotdFile = /etc/ngircd/ngircd.motd
 
 	# 用于替代MOTD文件的简单短语
 	MotdPhrase = "Welcome to ARKFUTURE"
@@ -121,7 +121,7 @@
 	ConnectIPv4 = yes
 
 	# 为新本地客户端设置的默认用户模式
-	;DefaultUserModes =
+	DefaultUserModes =
 
 	# 当客户端连接至服务器时执行 DNS 查询
 	DNS = yes
