--- a/ARKFUTURE/CONFIG/other/ngircd2.conf
+++ b/ARKFUTURE/CONFIG/other/ngircd2.conf
@@ -5,11 +5,11 @@
     Name = arkfuture.test
     AdminInfo1 = arkfuture
     AdminInfo2 = Server Administrator
-    AdminEMail = pbp9wdep2@mozmail.com
+    AdminEMail = arkfuture@i2pmail.org
     HelpFile = /usr/share/doc/ngircd/Commands.txt
     Info = ARKFUTURE-NET
     Listen = ::,0.0.0.0
-    ;MotdFile = /etc/ngircd/ngircd.motd
+    MotdFile = /etc/ngircd/ngircd.motd
     MotdPhrase = "Welcome to ARKFUTURE"
     Network = ARKFUTURE
     ;Password =
@@ -40,7 +40,7 @@
     CloakUserToNick = yes
     ConnectIPv4 = yes
     ConnectIPv6 = yes
-    ;DefaultUserModes =
+    DefaultUserModes =
     DNS = yes
     ;IncludeDir =
     MorePrivacy = no
