--- a/ARKFUTURE/CONFIG/i2pd&tor&gnunet/i2pd.conf
+++ b/ARKFUTURE/CONFIG/i2pd&tor&gnunet/i2pd.conf
@@ -61,8 +61,8 @@ name = I2P
 [reseed]
 verify = true
 #urls = 
-file = https://reseed.stormycloud.org/i2pseeds.su3
-yggurls = http://[324:71e:281a:9ed3::ace]:7070/
+#file = https://reseed.stormycloud.org/i2pseeds.su3
+#yggurls = http://[324:71e:281a:9ed3::ace]:7070/
 #proxy = socks://127.0.0.1:5554
 
 [addressbook]
