--- a/ARKFUTURE/CONFIG/other/irssi.conf
+++ b/ARKFUTURE/CONFIG/other/irssi.conf
@@ -40,6 +40,14 @@ servers = (
     tls_cert = "";
   },
   {
+    address = "irc.abjects.net";
+    chatnet = "Abjects";
+    port = "6697";
+    use_tls = "yes";
+    tls_verify = "yes";
+    tls_cert = "";
+  },
+  {
     address = "irc.hackint.org";
     chatnet = "Hackint";
     port = "6697";
@@ -81,6 +89,15 @@ chatnets = {
     sasl_username = "";
     sasl_password = "";
   };
+  Abjects = {
+    type = "IRC";
+    max_kicks = "4";
+    max_msgs = "20";
+    max_whois = "30";
+    sasl_mechanism = "";
+    sasl_username = "";
+    sasl_password = "";
+  };
   Rizon = {
     type = "IRC";
     max_kicks = "4";
@@ -108,6 +125,7 @@ channels = (
   { name = "#lobby"; chatnet = "HybridIRC"; autojoin = "No"; },
   { name = "#lobby"; chatnet = "Rizon"; autojoin = "No"; },
   { name = "#lobby"; chatnet = "Undernet"; autojoin = "No"; },
+  { name = "#lobby"; chatnet = "Abjects"; autojoin = "No"; },
   { name = "#lobby"; chatnet = "Hackint"; autojoin = "No"; },
 );
 
