--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -205,6 +205,11 @@
            nativeping="yes" 
            proxyranges="*"> 
 
+<sts host="*"
+     duration="60d"
+     port="6697"
+     preload="yes">
+
 
 #-#-#-#-#-#-#-#-#-#额外的模块配置-#-#-#-#-#-#-#-#
 <maxmind file="&dir.config;/conf/CC.mmdb">
