--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -44,6 +44,10 @@
       protocols="all"
       sslprofile="Clients"
       type="clients">
+<bind port="6666"
+      type="clients"
+      hook="websocket"
+      sslprofile="Websocket">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-连接设置-#-#-#-#-#-#-#-#-#-#-#-#-#
