--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -1,7 +1,6 @@
 #modulesconf -- UTF-8 
-#-#-#-#-#-#-#-#-#-#官方模块配置-#-#-#-#-#-#-#-#
 <config format="xml">
-
+#-#-#-#-#-#-#-#-#-#Default 模块配置-#-#-#-#-#-#-#-#
 <anticaps lowercase="abcdefghijklmnopqrstuvwxyz"
           uppercase="ABCDEFGHIJKLMNOPQRSTUVWXYZ">
 <auditorium opcansee="no"
@@ -45,10 +44,9 @@
               prefix="%"
               rank="20000"
               ranktoset="30000"
-              ranktounset="300
+              ranktounset="300">
 <codepage name="ascii"
           charset="ascii">
-<include file="&ConfPath;ascii.conf">
 <cloak method="fingerprint"
        case="lower"
        class=""
@@ -102,7 +100,6 @@
             backoff="2"
             maxbackoff="5m">
 <hidechans affectsopers="no">
-<include file="&ConfPath;helpop.conf">
 <helpmode ignorehideoper="no"
           markhelpers="yes">
 <inviteexception bypasskey="yes">
@@ -199,17 +196,14 @@
            proxyranges="*"> 
 
 
-#-#-#-#-#-#-#-#-#-#额外的模块配置-#-#-#-#-#-#-#-#
-<maxmind file="&ConfPath;CC.mmdb">
+#-#-#-#-#-#-#-#-#-#Extra 模块配置-#-#-#-#-#-#-#-#
+# 请自行参考官方配置后补充配置 对应模块:argon2 // geo_maxmind
 
-# 配置SSL(如果让此项生效,需要自行编译和启用SSL模块,如果是安装了官方的安装包,此配置不生效)
-# 请自行参考官方配置后补充配置 对应模块:ssl_openssl 或 ssl_gnutls 和 ircv3_sts
-<bind port="6680"
-      hook="websocket"
-      type="clients">
+#-#-#-#-#-#-#-#-#-#SSL/TLS-#-#-#-#-#-#-#-#
+# 请自行参考官方配置后补充配置 对应模块:ssl_openssl // ssl_gnutls // ircv3_sts // sslrehashsignal
+
+#-#-#-#-#-#-#-#-#-#数据库/认证/LDAP-#-#-#-#-#-#-#-#
+# 请自行参考官方配置后补充配置 对应模块:sqlite3 // mysql // pgsql // ldap
 
 #-#-#-#-#-#-#-#-#-#IRC多服务器桥接/IRC服务框架-#-#-#-#-#-#-#-#
 # 请自行参考官方配置后补充配置 对应模块:spanningtree
-
-#-#-#-#-#-#-#-#-#-#数据库-#-#-#-#-#-#-#-#
-# 请自行参考官方配置后补充配置 对应模块:sqlite3 或 mysql 或 pgsql
