--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -1,4 +1,4 @@
-# Inspircd conf ---UTF-8 ---Security configuration
+# Inspircd conf ---UTF-8 ---Security configuration ---v4.7ARKFUTUREConfigure
 # 这只是一个基础的设置文件 它可能需要根据您的需求进行调整
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
 
@@ -9,19 +9,19 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-定义-#-#-#-#-#-#-#-#-#-#-#-#-#
-# <path> 标记定义了服务器的目录结构.此标记只能定义一次.
+# <path>标签定义了服务器的目录结构.此标签只能定义一次.
 <path configdir="&dir.config;">
 
-# <define> 标记允许您定义一个实体(定义服务器变量).此标记可以根据需要定义多次.
+# <define>标签允许您定义一个实体(定义服务器变量).此标签可以根据需要定义多次.
 # 定义路径
 <define name="ConfPath" value="conf/">
 <define name="TxtPath" value="txt/">
-# 定义域名
+# 定义域名[此项的value需要修改为您的irc域名]
 <define name="Domain" value="arkfuture.test">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
-#<server>标签定义了本地服务器的设置.此标记只能定义一次.
+# <server>标签定义了本地服务器的设置.此标签只能定义一次.
 <server name="&Domain;"
         description="ARKFUTURE-NET"
         network="ARKFUTURE"
@@ -29,14 +29,14 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-管理员信息-#-#-#-#-#-#-#-#-#-#-#-#-#
-#<admin>标签定义了服务器管理员的联系方式.此标记只能定义一次.
+# <admin>标签定义了服务器管理员的联系方式.此标签只能定义一次.
 <admin name="arkfuture"
        description="Server Administrator"
        email="arkfuture@i2pmail.org">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-端口设置-#-#-#-#-#-#-#-#-#-#-#-#-#
-#<bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
+# <bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
 <bind port="6667,6668,6669"
       protocols="all"
       type="clients">
@@ -51,7 +51,7 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-连接设置-#-#-#-#-#-#-#-#-#-#-#-#-#
-#<connect>标签定义了一个类,当用户连接到服务器时,可以将用户过滤到这个类中.此标记可以根据需要定义多次.
+# <connect>标签定义了一个类,当用户连接到服务器时,可以将用户过滤到这个类中.此标签可以根据需要定义多次.
 <connect name="Main"
          commandrate="1000"
          fakelag="yes"
@@ -87,13 +87,13 @@
          port="6697"
          requiressl="yes">
 
-#标记定义定位克隆时应查看的IP地址位数.此标记只能定义一次.
+# <cidr>标签定义定位克隆时应查看的IP地址位数.此标签只能定义一次.
 <cidr ipv4clone="32"
       ipv6clone="128">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-操作员设置-#-#-#-#-#-#-#-#-#-#-#-#-#
-#<class>标签定义了一组服务器操作员特权.此标记可以根据需要定义多次
+# <class>标签定义了一组服务器操作员特权.此标签可以根据需要定义多次
 <class name="Shutdown"
        commands="DIE RESTART REHASH LOADMODULE UNLOADMODULE RELOADMODULE GLOADMODULE GUNLOADMODULE GRELOADMODULE">
 <class name="SACommands" 
@@ -107,7 +107,7 @@
 <class name="HostCloak"
        commands="SETHOST SETIDENT SETIDLE CHGNAME CHGHOST CHGIDENT">
 
-#<type>标签定义了服务器操作员的类型.此标记可以根据需要定义多次.
+# <type>标签定义了服务器操作员的类型.此标签可以根据需要定义多次.
 <type name="NetAdmin"
        classes="OperChat SACommands BanControl HostCloak Shutdown ServerLink"
        host=""
@@ -127,28 +127,26 @@
        vhost=""
        level="50">
 
-#<oper>标签定义了一个服务器操作员帐户.此标记可以根据需要定义多次.
-# 使用include来加载一个单独的操作员账户设置文件
-#<include file="&ConfPath;opers.conf"> //此项设置已经使用数据库模块代替 故不导入opers.conf文件
+# <oper>标签定义了一个服务器操作员帐户.此标签可以根据需要定义多次.
 
 
 #-#-#-#-#-#-#-#-#-#-杂项设置-#-#-#-#-#-#-#-#-#-#
-#<files><execfiles>标签读取一个或多个文件.这两个标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
+# <files><execfiles>标签读取一个或多个文件.这两个标签只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
 <files motd="&TxtPath;motd.txt"
        opermotd="&TxtPath;opermotd.txt"
        quotes="&TxtPath;quotes.txt"
        rules="&TxtPath;rules.txt">
 
-#<dns>标签定义了在查找主机名时要使用的DNS服务器.此标记只能定义一次.
+# <dns>标签定义了在查找主机名时要使用的DNS服务器.此标签只能定义一次.
 <dns enabled="yes"
      timeout="5s">
 
-#<pid>标签定义了pid文件的位置.此标记只能定义一次.
+# <pid>标签定义了pid文件的位置.此标签只能定义一次.
 <pid file="/var/run/inspircd/inspircd.pid">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#-服务器选项-#-#-#-#-#-#-#-#-#-#-#-#-#
-#<options>标签定义了常规设置选项.此标记只能定义一次.
+# <options>标签定义了常规设置选项.此标签只能定义一次.
 <options cyclehostsfromuser="no"
          defaultbind="auto"
          defaultmodes="nost"
@@ -172,7 +170,7 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#安全设置#-#-#-#-#-#-#-#-#-#-#-#
-#<security>标签定义了与服务器安全相关的设置选项.此标记只能定义一次.
+# <security>标签定义了与服务器安全相关的设置选项.此标签只能定义一次.
 <security announceinvites="dynamic"
           customversion="ARKFUTURE-NET"
           genericoper="no"
@@ -187,13 +185,13 @@
           userstats="Pu"
           maphide="HTTPS://ARKFUTURE.GITHUB.IO/#irc">
 
-#<exception>标签定义了服务器永久性例外规则,允许特定主机绕过全局限制.此标记可以根据需要定义多次.
+# <exception>标签定义了服务器永久性例外规则,允许特定主机绕过全局限制.此标签可以根据需要定义多次.
 <exception host="127.0.0.1"
            reason="本机地址">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#性能设置#-#-#-#-#-#-#-#-#-#-#
-#<performance>标签定义了与服务器性能相关的设置选项.此标记只能定义一次.
+# <performance>标签定义了与服务器性能相关的设置选项.此标签只能定义一次.
 <performance clonesonconnect="yes" 
              netbuffersize="" 
              softlimit="" 
@@ -202,7 +200,7 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#-WHOWAS选项-#-#-#-#-#-#-#-#-#-#-#-#-#
-#<whowas>标签定义了/WHOWAS数据库的设置.此标记只能定义一次.
+# <whowas>标签定义了/WHOWAS数据库的设置.此标签只能定义一次.
 <whowas groupsize="10"
         maxgroups="10000"
         maxkeep="12h"
@@ -210,7 +208,7 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#限制设置#-#-#-#-#-#-#-#-#-#-#-#
-#<limits> 标记定义用户可设置字段最大长度
+# <limits>标签定义用户可设置字段最大长度
 <limits maxaway="390"
         maxchan="64"
         maxhost="70"
@@ -223,35 +221,35 @@
         maxtopic="390"
         maxuser="10">
 # 最大长度限制
-#maxaway = 离开消息.
-#maxchan = 频道名称.
-#maxhost = 主机名.
-#maxkey = 通频道密钥.
-#maxkick = 踢出消息.
-#maxmodes = 单个MODE消息中可修改的非标记模式的最大数量.
-#maxnick = 昵称.
-#maxquit = 退出消息.
-#maxreal = 真实的名称.
-#maxtopic = 频道主题.
-#maxuser = 用户名.
+#maxaway = 离开消息
+#maxchan = 频道名称
+#maxhost = 主机名
+#maxkey = 通频道密钥
+#maxkick = 踢出消息
+#maxmodes = 单个MODE消息中可修改的非标签模式的最大数量
+#maxnick = 昵称
+#maxquit = 退出消息
+#maxreal = 真实的名称
+#maxtopic = 频道主题
+#maxuser = 用户名
 
 
-#<insane>标记定义了限制,以防止创建过宽的X线.此标记只能定义一次.
+# <insane>标签定义了限制,以防止创建过宽的X线.此标签只能定义一次.
 <insane hostmasks="no"
         ipmasks="no"
         nickmasks="no"
         trigger="95.5">
 
-#<badnick>标签定义了永久Q线.此标记可以根据需要定义多次.
+#<badnick>标签定义了永久Q线.此标签可以根据需要定义多次.
 <badnick nick="ChanServ" reason="为网络服务保留">
 <badnick nick="NickServ" reason="为网络服务保留">
 <badnick nick="OperServ" reason="为网络服务保留">
 <badnick nick="MemoServ" reason="为网络服务保留">
 
-#<badip>标签定义了永久Z线.此标记可以根据需要定义多次.
+#<badip>标签定义了永久Z线.此标签可以根据需要定义多次.
 <badip ipmask="172.16.0.0" reason="为防止攻击保留">
 
-#<badhost>标签定义了永久K线.此标记可以根据需要定义多次.
+#<badhost>标签定义了永久K线.此标签可以根据需要定义多次.
 <badhost host="*.example.com" reason="为防止攻击保留">
 
 #<maxlist>标签的定义数量的清单模式, 可以建立在一个通道
@@ -301,7 +299,7 @@
 <module name="classban">
 <module name="clearchan">
 <module name="cloak">
-#此模块将被弃用<module name="cloak_md5">
+#<module name="cloak_md5"> 此模块将被弃用
 <module name="cloak_sha256">
 <module name="cloak_static">
 <module name="cloak_user">
@@ -439,21 +437,28 @@
 <module name="xline_db">
 
 ######Extra Modules
-<module name="argon2">
+#<module name="argon2">
 #<module name="geo_maxmind">
-<module name="ldap">
+#<module name="ldap">
 #<module name="log_json"> 注意:此模块因为库的使用问题,将不会编译在安装包中
-<module name="log_syslog">
+#<module name="log_syslog">
 #<module name="mysql">
 #<module name="pgsql">
-<module name="regex_pcre2">
-<module name="regex_posix">
-<module name="regex_re2">
+#<module name="regex_pcre2">
+#<module name="regex_posix">
+#<module name="regex_re2">
 <module name="sqlite3">
 <module name="ssl_gnutls">
 #<module name="ssl_openssl">
-<module name="sslrehashsignal">
+#<module name="sslrehashsignal">
 
-######模块的设置文件
+
+#-#-#-#-#-#-#-#-#-#-#-#-#包含文件#-#-#-#-#-#-#-#-#-#-#-#
+# 模块配置文件
 <include file="&ConfPath;modulesconf.conf"> 
-
+# 管理员配置文件
+<include file="&ConfPath;opers.conf">
+# codepage所导入的ascii格式
+<include file="&ConfPath;ascii.conf">
+# 帮助文件
+<include file="&ConfPath;helpop.conf">
