--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -1,7 +1,7 @@
 # Inspircd conf ---UTF-8 ---Security configuration ---v4.7BasicConfigure
 # 这只是一个基础的设置文件 它可能需要根据您的需求进行调整
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
-# !!!!预编译模块需要[自行编译安装]或者[使用我们已编译好的全模块软件包]后才可以使用,否则将会报错,这也是我们注释掉第三方模块的原因
+# !!!!我们注释掉了预编译的模块!!!!
 
 # 您可以在以下文档中查询详细设置来完善此设置,我们的设置基于官方文档
 # 请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
@@ -39,6 +39,7 @@
 #-#-#-#-#-#-#-#-#-#-#-#-端口设置-#-#-#-#-#-#-#-#-#-#-#-#-#
 # <bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
 <bind port="6667,6668,6669"
+      protocols="all"
       type="clients">
 
 
@@ -157,7 +158,7 @@
 #-#-#-#-#-#-#-#-#-#-#-#安全设置#-#-#-#-#-#-#-#-#-#-#-#
 # <security>标签定义了与服务器安全相关的设置选项.此标签只能定义一次.
 <security announceinvites="dynamic"
-          customversion=""
+          customversion="ARKFUTURE-NET"
           genericoper="no"
           publicxlinequit="很遗憾, 你因匹配到 %fulltype% 而离开. 此 %type% 于 %created% 创建, 持续时间为 %duration%, 将于 %expiry% 过期, 目前还剩 %remaining% 时间. 如获取帮助 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取详细信息."
           hidekills="您已经被KILL, 如获取帮助 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取详细信息."
@@ -171,8 +172,8 @@
           maphide="HTTPS://ARKFUTURE.GITHUB.IO/#irc">
 
 # <exception>标签定义了服务器永久性例外规则,允许特定主机绕过全局限制.此标签可以根据需要定义多次.
-<exception host="127.0.0.1"
-           reason="本机地址">
+<exception host=""
+           reason="例外">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#性能设置#-#-#-#-#-#-#-#-#-#-#
@@ -443,7 +444,7 @@
 <include file="&ConfPath;modulesconf.conf">
 # 管理员配置文件
 <include file="&ConfPath;opers.conf">
-# codepage所导入的ascii格式
+# codepage模块所导入的ascii格式
 <include file="&ConfPath;ascii.conf">
 # 帮助文件
 <include file="&ConfPath;helpop.conf">
