--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -196,14 +196,18 @@
            proxyranges="*"> 
 
 
+# 注意: 下面 部分配置 仅在 INSPIRCD 编译时启用 相关模块 支持时可用
 #-#-#-#-#-#-#-#-#-#Extra 模块配置-#-#-#-#-#-#-#-#
 # 请自行参考官方配置后补充配置 对应模块:argon2 // geo_maxmind
+
 
 #-#-#-#-#-#-#-#-#-#SSL/TLS-#-#-#-#-#-#-#-#
 # 请自行参考官方配置后补充配置 对应模块:ssl_openssl // ssl_gnutls // ircv3_sts // sslrehashsignal
 
+
 #-#-#-#-#-#-#-#-#-#数据库/认证/LDAP-#-#-#-#-#-#-#-#
 # 请自行参考官方配置后补充配置 对应模块:sqlite3 // mysql // pgsql // ldap
+
 
 #-#-#-#-#-#-#-#-#-#IRC多服务器桥接/IRC服务框架-#-#-#-#-#-#-#-#
 # 请自行参考官方配置后补充配置 对应模块:spanningtree
