--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -1,7 +1,6 @@
 #modulesconf -- UTF-8 
-#-#-#-#-#-#-#-#-#-#官方模块配置-#-#-#-#-#-#-#-#
 <config format="xml">
-
+#-#-#-#-#-#-#-#-#-#Default 模块配置-#-#-#-#-#-#-#-#
 <anticaps lowercase="abcdefghijklmnopqrstuvwxyz"
           uppercase="ABCDEFGHIJKLMNOPQRSTUVWXYZ">
 <auditorium opcansee="no"
@@ -49,7 +48,6 @@
               depriv="yes">
 <codepage name="ascii"
           charset="ascii">
-<include file="&ConfPath;ascii.conf">
 <cloak method="fingerprint"
        case="lower"
        class=""
@@ -103,7 +101,6 @@
             backoff="2"
             maxbackoff="5m">
 <hidechans affectsopers="no">
-<include file="&ConfPath;helpop.conf">
 <helpmode ignorehideoper="no"
           markhelpers="yes">
 <inviteexception bypasskey="yes">
@@ -211,13 +208,13 @@
      preload="yes">
 
 
-#-#-#-#-#-#-#-#-#-#额外的模块配置-#-#-#-#-#-#-#-#
-<maxmind file="&dir.config;/conf/CC.mmdb">
+# 注意: 下面 部分配置 仅在 INSPIRCD 编译时启用 相关模块 支持时可用
+#-#-#-#-#-#-#-#-#-#Extra 模块配置-#-#-#-#-#-#-#-#
+# 请自行参考官方配置后补充配置 对应模块:argon2 // geo_maxmind
 
-# 配置SSL(如果让此项生效,需要自行编译和启用SSL模块,如果是安装了官方的安装包,此配置不生效)
-# 请自行参考官方配置后补充配置 对应模块:ssl_openssl 或 ssl_gnutls 和 ircv3_sts
-# 注意：此部分仅在 INSPIRCD 编译时启用 SSL 支持时可用
 
+#-#-#-#-#-#-#-#-#-#SSL/TLS-#-#-#-#-#-#-#-#
+# 请自行参考官方配置后补充配置 对应模块:ssl_openssl // ssl_gnutls // ircv3_sts // sslrehashsignal
 <gnutls onrehash="yes">
 <sslprofile name="Clients"
             provider="gnutls"
@@ -237,14 +234,8 @@
             priority="NORMAL">
 
 
-#-#-#-#-#-#-#-#-#-#IRC多服务器桥接-#-#-#-#-#-#-#-#
-# 请自行参考官方配置后补充配置
-# https://docs.inspircd.org/4/modules/spanningtree/
-# https://github.com/inspircd/inspircd/blob/insp4/docs/conf/links.example.conf
-
-
-#-#-#-#-#-#-#-#-#-#数据库-#-#-#-#-#-#-#-#
-# 请自行参考官方配置后补充配置 对应模块:sqlite3 或 mysql 或 pgsql
+#-#-#-#-#-#-#-#-#-#数据库/认证/LDAP-#-#-#-#-#-#-#-#
+# 请自行参考官方配置后补充配置 对应模块:sqlite3 // mysql // pgsql // ldap
 <database module="sqlite"
           id="auth"
           hostname="&dir.config;/conf/auth.sq3">
@@ -257,3 +248,7 @@
          query="SELECT * FROM user WHERE name='$nick' LIMIT 1"
          verbose="no">
 <mkpasswd operonly="no">
+
+
+#-#-#-#-#-#-#-#-#-#IRC多服务器桥接/IRC服务框架-#-#-#-#-#-#-#-#
+# 请自行参考官方配置后补充配置 对应模块:spanningtree
