--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -172,7 +172,7 @@
           maphide="HTTPS://ARKFUTURE.GITHUB.IO/#irc">
 
 # <exception>标签定义了服务器永久性例外规则,允许特定主机绕过全局限制.此标签可以根据需要定义多次.
-<exception host=""
+<exception host="127.0.0.1"
            reason="例外">
 
 
