--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -455,10 +455,26 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-#包含文件#-#-#-#-#-#-#-#-#-#-#-#
 # 模块配置文件
-<include file="&ConfPath;modulesconf.conf"> 
-# 管理员配置文件
-<include file="&ConfPath;opers.conf">
+#<include file="&ConfPath;modulesconf.conf"> 
 # codepage所导入的ascii格式
-<include file="&ConfPath;ascii.conf">
+#<include file="&ConfPath;ascii.conf">
 # 帮助文件
-<include file="&ConfPath;helpop.conf">
+#<include file="&ConfPath;helpop.conf">
+<include executable="curl --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf"
+noenv="yes"
+noexec="yes"
+noinclude="no"
+missingokay="no"
+>
+<include executable="curl --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/conf/ascii.conf"
+noenv="yes"
+noexec="yes"
+noinclude="no"
+missingokay="no"
+>
+<include executable="curl --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/conf/helpop.conf"
+noenv="yes"
+noexec="yes"
+noinclude="no"
+missingokay="no"
+>
