--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -132,10 +132,15 @@
 
 #-#-#-#-#-#-#-#-#-#-杂项设置-#-#-#-#-#-#-#-#-#-#
 # <files><execfiles>标签读取一个或多个文件.这两个标签只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
-<files motd="&TxtPath;motd.txt"
-       opermotd="&TxtPath;opermotd.txt"
-       quotes="&TxtPath;quotes.txt"
-       rules="&TxtPath;rules.txt">
+#<files motd="&TxtPath;motd.txt"
+#       opermotd="&TxtPath;opermotd.txt"
+#       quotes="&TxtPath;quotes.txt"
+#       rules="&TxtPath;rules.txt">
+
+<execfiles motd="curl -L https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/motd.txt"
+           opermotd="curl -L https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/opermotd.txt"
+           quotes="curl -L https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/quotes.txt"
+           rules="curl -L https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/rules.txt">
 
 # <dns>标签定义了在查找主机名时要使用的DNS服务器.此标签只能定义一次.
 <dns enabled="yes"
@@ -441,16 +446,16 @@
 #<module name="geo_maxmind">
 #<module name="ldap">
 #<module name="log_json"> 注意:此模块因为库的使用问题,将不会编译在安装包中
-#<module name="log_syslog">
+<module name="log_syslog">
 #<module name="mysql">
 #<module name="pgsql">
-#<module name="regex_pcre2">
-#<module name="regex_posix">
-#<module name="regex_re2">
+<module name="regex_pcre2">
+<module name="regex_posix">
+<module name="regex_re2">
 <module name="sqlite3">
 <module name="ssl_gnutls">
 #<module name="ssl_openssl">
-#<module name="sslrehashsignal">
+<module name="sslrehashsignal">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#包含文件#-#-#-#-#-#-#-#-#-#-#-#
