--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -137,10 +137,10 @@
 #       quotes="&TxtPath;quotes.txt"
 #       rules="&TxtPath;rules.txt">
 
-<execfiles motd="curl -L https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/motd.txt"
-           opermotd="curl -L https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/opermotd.txt"
-           quotes="curl -L https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/quotes.txt"
-           rules="curl -L https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/rules.txt">
+<execfiles motd="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/motd.txt"
+           opermotd="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/opermotd.txt"
+           quotes="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/quotes.txt"
+           rules="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/rules.txt">
 
 # <dns>标签定义了在查找主机名时要使用的DNS服务器.此标签只能定义一次.
 <dns enabled="yes"
@@ -465,19 +465,19 @@
 #<include file="&ConfPath;ascii.conf">
 # 帮助文件
 #<include file="&ConfPath;helpop.conf">
-<include executable="curl --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf"
+<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf"
 noenv="yes"
 noexec="yes"
 noinclude="no"
 missingokay="no"
 >
-<include executable="curl --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/conf/ascii.conf"
+<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/conf/ascii.conf"
 noenv="yes"
 noexec="yes"
 noinclude="no"
 missingokay="no"
 >
-<include executable="curl --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/conf/helpop.conf"
+<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/conf/helpop.conf"
 noenv="yes"
 noexec="yes"
 noinclude="no"
