--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -1,5 +1,4 @@
 #modulesconf -- UTF-8 
-<config format="xml">
 #-#-#-#-#-#-#-#-#-#Default 模块配置-#-#-#-#-#-#-#-#
 <anticaps lowercase="abcdefghijklmnopqrstuvwxyz"
           uppercase="ABCDEFGHIJKLMNOPQRSTUVWXYZ">
@@ -134,7 +133,7 @@
              nick="NickServ">
 <mkpasswd operonly="no">
       
-<permchanneldb filename="&ConfPath;permchannels.conf"
+<permchanneldb filename="&ConfPath;/permchannels.conf"
                listmodes="yes"
                operonly="yes"
                saveperiod="5s"
@@ -185,7 +184,7 @@
 <starttls provider="">
 <timedbans sendnotice="yes">
 <watch maxwatch="32">
-<xlinedb filename="&ConfPath;xline.db"
+<xlinedb filename="&ConfPath;/xline.db"
          saveperiod="5s"
          backoff="2"
          maxbackoff="5m">
@@ -196,7 +195,7 @@
            proxyranges="*"> 
 
 
-# 注意: 下面 部分配置 仅在 INSPIRCD 编译时启用 相关模块 支持时可用
+# 注意: 下面配置仅在 INSPIRCD 编译时启用 相关模块 支持时可用
 #-#-#-#-#-#-#-#-#-#Extra 模块配置-#-#-#-#-#-#-#-#
 # 请自行参考官方配置后补充配置 对应模块:argon2 // geo_maxmind
 
@@ -208,6 +207,3 @@
 #-#-#-#-#-#-#-#-#-#数据库/认证/LDAP-#-#-#-#-#-#-#-#
 # 请自行参考官方配置后补充配置 对应模块:sqlite3 // mysql // pgsql // ldap
 
-
-#-#-#-#-#-#-#-#-#-#IRC多服务器桥接/IRC服务框架-#-#-#-#-#-#-#-#
-# 请自行参考官方配置后补充配置 对应模块:spanningtree
