--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -115,12 +115,12 @@
 <dns enabled="yes"
      timeout="5s">
 
-# <pid>标签定义了pid文件的位置.此标签只能定义一次.
-<pid file="/var/run/inspircd/inspircd.pid">
-
 # <cidr>标签定义定位克隆时应查看的IP地址位数.此标签只能定义一次.
 <cidr ipv4clone="32"
       ipv6clone="128">
+
+# <pid>标签定义了pid文件的位置.此标签只能定义一次.
+<pid file="/var/run/inspircd/inspircd.pid">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#服务器选项#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -165,7 +165,7 @@
 
 # <exception>标签定义了服务器永久性例外规则,允许特定主机绕过全局限制.此标签可以根据需要定义多次.
 <exception host="127.0.0.1"
-           reason="例外">
+           reason="例外规则">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#性能设置#-#-#-#-#-#-#-#-#-#-#
@@ -443,13 +443,7 @@
          noexec="no"
          noinclude="no"
          missingokay="no">
-# 管理员配置文件
-<include file="&ConfPath;/opers.conf"
-         noenv="yes"
-         noexec="yes"
-         noinclude="no"
-         #mandatorytag="oper"
-         missingokay="no">
+
 # codepage模块所导入的ascii格式
 <include file="&ConfPath;/ascii.conf"
          noenv="yes"
@@ -457,10 +451,19 @@
          noinclude="no"
          mandatorytag="cpchars"
          missingokay="no">
+
 # 帮助文件
 <include file="&ConfPath;/helpop.conf"
          noenv="yes"
          noexec="yes"
          noinclude="no"
          mandatorytag="helpmsg"
+         missingokay="no">
+
+# 管理员配置文件
+<include file="&ConfPath;/opers.conf"
+         noenv="yes"
+         noexec="yes"
+         noinclude="no"
+         #mandatorytag="oper"
          missingokay="no">
