--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -8,19 +8,19 @@
 # 也请查看我们的README.md文件以获取更多信息 https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/README.md
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-定义-#-#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#定义#-#-#-#-#-#-#-#-#-#-#-#-#
 # <path>标签定义了服务器的目录结构.此标签只能定义一次.
 <path configdir="&dir.config;">
 
 # <define>标签允许您定义一个实体(定义服务器变量).此标签可以根据需要定义多次.
 # 定义路径
-<define name="ConfPath" value="conf/">
-<define name="TxtPath" value="txt/">
+<define name="ConfPath" value="conf">
+<define name="TxtPath" value="txt">
 # 定义域名[此项的value需要修改为您的irc域名]
 <define name="Domain" value="arkfuture.test">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#服务器描述#-#-#-#-#-#-#-#-#-#-#-#-#
 # <server>标签定义了本地服务器的设置.此标签只能定义一次.
 <server name="&Domain;"
         description="ARKFUTURE-NET"
@@ -28,14 +28,14 @@
         id="0AF">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-管理员信息-#-#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#管理员信息#-#-#-#-#-#-#-#-#-#-#-#-#
 # <admin>标签定义了服务器管理员的联系方式.此标签只能定义一次.
 <admin name="arkfuture"
        description="Server Administrator"
        email="arkfuture@i2pmail.org">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-端口设置-#-#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#端口设置#-#-#-#-#-#-#-#-#-#-#-#-#
 # <bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
 <bind port="6667,6668,6669"
       protocols="all"
@@ -50,7 +50,7 @@
       sslprofile="Websocket">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-连接设置-#-#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#连接设置#-#-#-#-#-#-#-#-#-#-#-#-#
 # <connect>标签定义了一个类,当用户连接到服务器时,可以将用户过滤到这个类中.此标签可以根据需要定义多次.
 <connect name="Main"
          commandrate="1000"
@@ -72,7 +72,7 @@
          hash="bcrypt"
          usecloak="yes"
          useconnectban="yes"
-         modes="+cixwS"
+         modes="+iwx"
          motd="motd">  
 
 <connect name="Basic"
@@ -81,18 +81,8 @@
          usests="no"
          port="6667,6668,6669">
 
-<connect name="Secure"
-         parent="Main"
-         allow="*"
-         port="6697"
-         requiressl="yes">
 
-# <cidr>标签定义定位克隆时应查看的IP地址位数.此标签只能定义一次.
-<cidr ipv4clone="32"
-      ipv6clone="128">
-
-
-#-#-#-#-#-#-#-#-#-#-#-#-操作员设置-#-#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#操作员设置#-#-#-#-#-#-#-#-#-#-#-#-#
 # <class>标签定义了一组服务器操作员特权.此标签可以根据需要定义多次
 <class name="Shutdown"
        commands="DIE RESTART REHASH LOADMODULE UNLOADMODULE RELOADMODULE GLOADMODULE GUNLOADMODULE GRELOADMODULE">
@@ -127,30 +117,21 @@
        vhost=""
        level="50">
 
-# <oper>标签定义了一个服务器操作员帐户.此标签可以根据需要定义多次.
-
 
 #-#-#-#-#-#-#-#-#-#-杂项设置-#-#-#-#-#-#-#-#-#-#
-# <files><execfiles>标签读取一个或多个文件.这两个标签只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
-#<files motd="&TxtPath;motd.txt"
-#       opermotd="&TxtPath;opermotd.txt"
-#       quotes="&TxtPath;quotes.txt"
-#       rules="&TxtPath;rules.txt">
-
-<execfiles motd="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/motd.txt"
-           opermotd="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/opermotd.txt"
-           quotes="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/quotes.txt"
-           rules="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/rules.txt">
-
 # <dns>标签定义了在查找主机名时要使用的DNS服务器.此标签只能定义一次.
 <dns enabled="yes"
      timeout="5s">
+
+# <cidr>标签定义定位克隆时应查看的IP地址位数.此标签只能定义一次.
+<cidr ipv4clone="32"
+      ipv6clone="128">
 
 # <pid>标签定义了pid文件的位置.此标签只能定义一次.
 <pid file="/var/run/inspircd/inspircd.pid">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-#-服务器选项-#-#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#服务器选项#-#-#-#-#-#-#-#-#-#-#-#-#
 # <options>标签定义了常规设置选项.此标签只能定义一次.
 <options cyclehostsfromuser="no"
          defaultbind="auto"
@@ -192,7 +173,7 @@
 
 # <exception>标签定义了服务器永久性例外规则,允许特定主机绕过全局限制.此标签可以根据需要定义多次.
 <exception host="127.0.0.1"
-           reason="本机地址">
+           reason="例外规则">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#性能设置#-#-#-#-#-#-#-#-#-#-#
@@ -204,7 +185,7 @@
              timeskipwarn="2s"> 
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-#-WHOWAS选项-#-#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#WHOWAS选项#-#-#-#-#-#-#-#-#-#-#-#-#
 # <whowas>标签定义了/WHOWAS数据库的设置.此标签只能定义一次.
 <whowas groupsize="10"
         maxgroups="10000"
@@ -237,7 +218,6 @@
 #maxreal = 真实的名称
 #maxtopic = 频道主题
 #maxuser = 用户名
-
 
 # <insane>标签定义了限制,以防止创建过宽的X线.此标签只能定义一次.
 <insane hostmasks="no"
@@ -272,8 +252,7 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-#模块#-#-#-#-#-#-#-#-#-#-#-#
 # 请阅读 https://docs.inspircd.org/4/modules/ 并根据您的需求加载模块
-
-######Default Modules
+######Default Modules List
 <module name="abbreviation">
 <module name="account">
 <module name="alias">
@@ -441,7 +420,7 @@
 <module name="websocket">
 <module name="xline_db">
 
-######Extra Modules
+######Extra Modules List
 #<module name="argon2">
 #<module name="geo_maxmind">
 #<module name="ldap">
@@ -458,28 +437,33 @@
 <module name="sslrehashsignal">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-#包含文件#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#文件包含及读取#-#-#-#-#-#-#-#-#-#-#-#
+# <files><execfiles>标签读取一个或多个文件.这两个标签只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
+<files motd="&TxtPath;/motd.txt"
+       opermotd="&TxtPath;/opermotd.txt"
+       quotes="&TxtPath;/quotes.txt"
+       rules="&TxtPath;/rules.txt">
+
+# <include>标签允许您将文件的内容或命令的输出包含在配置文件中,此标签可以根据需要多次定义.
 # 模块配置文件
-#<include file="&ConfPath;modulesconf.conf"> 
-# codepage所导入的ascii格式
-#<include file="&ConfPath;ascii.conf">
+<include file="&ConfPath;/modulesconf.conf"
+         noenv="yes"
+         noexec="no"
+         noinclude="no"
+         missingokay="no">
+
+# codepage模块所导入的ascii格式
+<include file="&ConfPath;/ascii.conf"
+         noenv="yes"
+         noexec="yes"
+         noinclude="no"
+         mandatorytag="cpchars"
+         missingokay="no">
+
 # 帮助文件
-#<include file="&ConfPath;helpop.conf">
-<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf"
-noenv="yes"
-noexec="yes"
-noinclude="no"
-missingokay="no"
->
-<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/conf/ascii.conf"
-noenv="yes"
-noexec="yes"
-noinclude="no"
-missingokay="no"
->
-<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/conf/helpop.conf"
-noenv="yes"
-noexec="yes"
-noinclude="no"
-missingokay="no"
->
+<include file="&ConfPath;/helpop.conf"
+         noenv="yes"
+         noexec="yes"
+         noinclude="no"
+         mandatorytag="helpmsg"
+         missingokay="no">
