--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -128,7 +128,7 @@
       ipv6clone="128">
 
 # <pid>标签定义了pid文件的位置.此标签只能定义一次.
-<pid file="/var/run/inspircd/inspircd.pid">
+<pid executable="/var/run/inspircd/inspircd.pid">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#服务器选项#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -439,21 +439,21 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-#文件包含及读取#-#-#-#-#-#-#-#-#-#-#-#
 # <files><execfiles>标签读取一个或多个文件.这两个标签只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
-<files motd="&TxtPath;/motd.txt"
-       opermotd="&TxtPath;/opermotd.txt"
-       quotes="&TxtPath;/quotes.txt"
-       rules="&TxtPath;/rules.txt">
+<execfiles motd="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/motd.txt"
+           opermotd="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/opermotd.txt"
+           quotes="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/quotes.txt"
+           rules="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/rules.txt">
 
 # <include>标签允许您将文件的内容或命令的输出包含在配置文件中,此标签可以根据需要多次定义.
 # 模块配置文件
-<include file="&ConfPath;/modulesconf.conf"
+<include executable="https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf"
          noenv="yes"
          noexec="no"
          noinclude="no"
          missingokay="no">
 
 # codepage模块所导入的ascii格式
-<include file="&ConfPath;/ascii.conf"
+<include executable="https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/conf/ascii.conf"
          noenv="yes"
          noexec="yes"
          noinclude="no"
@@ -461,7 +461,7 @@
          missingokay="no">
 
 # 帮助文件
-<include file="&ConfPath;/helpop.conf"
+<include executable="https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/conf/helpop.conf"
          noenv="yes"
          noexec="yes"
          noinclude="no"
