--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -1,5 +1,4 @@
 #modulesconf -- UTF-8 
-<config format="xml">
 #-#-#-#-#-#-#-#-#-#Default 模块配置-#-#-#-#-#-#-#-#
 <anticaps lowercase="abcdefghijklmnopqrstuvwxyz"
           uppercase="ABCDEFGHIJKLMNOPQRSTUVWXYZ">
@@ -135,7 +134,7 @@
              nick="NickServ">
 <mkpasswd operonly="no">
       
-<permchanneldb filename="&ConfPath;permchannels.conf"
+<permchanneldb filename="&ConfPath;/permchannels.conf"
                listmodes="yes"
                operonly="yes"
                saveperiod="5s"
@@ -208,7 +207,7 @@
      preload="yes">
 
 
-# 注意: 下面 部分配置 仅在 INSPIRCD 编译时启用 相关模块 支持时可用
+# 注意: 下面配置仅在 INSPIRCD 编译时启用 相关模块 支持时可用
 #-#-#-#-#-#-#-#-#-#Extra 模块配置-#-#-#-#-#-#-#-#
 # 请自行参考官方配置后补充配置 对应模块:argon2 // geo_maxmind
 
