--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -43,7 +43,8 @@
               prefix="%"
               rank="20000"
               ranktoset="30000"
-              ranktounset="300">
+              ranktounset="30000"
+              depriv="yes">
 <codepage name="ascii"
           charset="ascii">
 <cloak method="fingerprint"
@@ -189,7 +190,7 @@
          backoff="2"
          maxbackoff="5m">
 
-<wsorigin allow="*">
+<wsorigin allow="http://*.*">
 <websocket defaultmode="text" 
            nativeping="yes" 
            proxyranges="*"> 
